# minitest

./: CMakeLists.txt
src/: CMakeLists.txt  MiniTest.cpp  MiniTest.h
src/test/: CMakeLists.txt  minitest_test.cpp
